# nieruchomosci-bi

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  ocena-etapy-3-4.md  pyproject.toml  raport-bi.md  streamlit_app.py  zadanie.md
.streamlit/: config.toml
config/postgres/: init-nieruchomosci.sh
config/postgres/migrations/: 001_fact_listing_grain.sql  002_fact_change_grain.sql  003_session_schema_updates.sql  004_roles_and_permissions.sql  005_stg_rejected_records.sql
config/postgres/views/: kpi_views.sql
dags/: _inject_env.py  gov_data_pipeline.py  gov_metadata_pipeline.py  gus_bdl_pipeline.py  kaggle_backfill_pipeline.py  kaggle_pipeline.py  mzp_pipeline.py  nbp_pipeline.py
src/api/: config.py
src/api/db/: connection.py  models.py  views.py
src/api/db/repositories/: __init__.py  base.py  developer_files.py  dimensions.py  flood_zones.py
src/api/geocoding/: google_maps.py
src/api/loaders/: base.py  gov_data_loader.py  gov_metadata_loader.py  gus_bdl_loader.py  kaggle_loader.py  mzp_loader.py  nbp_loader.py
src/api/quality/: checker.py  rules.py
src/api/scrapers/: __init__.py  base.py  download.py  gov_data_batch.py  gov_data_scraper.py  gov_metadata_scraper.py  gus_bdl_scraper.py  kaggle_scraper.py  mzp_scraper.py  nbp_scraper.py
src/api/staging/: base.py  column_mapper.py  gov_data_columns_mapping.json  gov_data_staging.py  gov_metadata_staging.py  kaggle_staging.py  nbp_staging.py  schema.py
src/api/transformers/: base.py  gov_data_transformer.py  gov_metadata_transformer.py  gus_bdl_transformer.py  kaggle_transformer.py  mzp_transformer.py  nbp_transformer.py
src/dashboard/: __init__.py  app.py  auth.py  charts.py  constants.py  data.py
src/nieruchomosci-api/: config.py
src/nieruchomosci-api/scrapers/: base.py
tests/: conftest.py
tests/integration/: test_flood_spatial.py  test_gov_data_loader.py  test_gus_bdl_loader.py  test_kaggle_dimensions.py  test_kaggle_loader.py  test_kpi_views.py  test_mzp_loader.py  test_nbp_loader.py
tests/unit/: test_column_mapper.py  test_dashboard_data.py  test_download.py  test_dq_checker.py  test_gov_data_batch_scraper.py  test_gov_data_transformer.py  test_gus_bdl_transformer.py  test_kaggle_scraper.py  test_kaggle_transformer.py  test_mzp_transformer.py  test_nbp_transformer.py
