[project]
name = "nieruchomosci-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nieruchomosci-api"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E","W","F","I","B","UP","S","PT","T20","N"
]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src/nieruchomosci-api"]
exclude = ["**/__pycache__", "**/.*"]
reportMissingTypeStubs = false
