[project]
name = "nieruchomosci-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.2",
    "sqlalchemy>=2.0",
    "fastexcel>=0.20.2",
    "httpx>=0.28.1",
    "kaggle>=2.2.0",
    "loguru>=0.7.3",
    "polars>=1.41.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "google-genai>=2.8.0",
    "psycopg2-binary>=2.9.10",
    "geoalchemy2>=0.17.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pre-commit>=4.6.0",
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E","W","F","I","B","UP","S","PT","T20","N"
]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src/api"]
exclude = ["**/__pycache__", "**/.*"]
reportMissingTypeStubs = false
